-- SQL dump generated using DBML (dbml-lang.org)
-- Database: PostgreSQL
-- Generated at: 2024-03-04T08:45:57.056Z

CREATE TABLE "users" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uid" varchar UNIQUE NOT NULL,
  "email" varchar UNIQUE NOT NULL,
  "first_name" varchar NOT NULL,
  "last_name" varchar,
  "password" varchar NOT NULL,
  "date_joined" timestamp DEFAULT 'now()'
);

CREATE TABLE "products" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "pid" varchar UNIQUE NOT NULL,
  "category" int,
  "name" varchar NOT NULL,
  "description" varchar,
  "stock" int NOT NULL,
  "price" int NOT NULL
);

CREATE TABLE "product_categories" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL
);

CREATE TABLE "orders" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "oid" varchar UNIQUE NOT NULL,
  "uid" varchar UNIQUE NOT NULL,
  "total_amount" int NOT NULL,
  "order_status" int NOT NULL DEFAULT 0,
  "ordered_at" timestamp DEFAULT 'now()'
);

CREATE TABLE "order_items" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "oid" varchar UNIQUE NOT NULL,
  "pid" varchar UNIQUE NOT NULL,
  "quantity" int NOT NULL,
  "amount" int NOT NULL
);

CREATE INDEX ON "users" ("email");

CREATE INDEX ON "users" ("uid");

CREATE INDEX ON "products" ("name");

CREATE INDEX ON "products" ("pid");

CREATE INDEX ON "orders" ("uid");

CREATE INDEX ON "order_items" ("oid");

ALTER TABLE "orders" ADD FOREIGN KEY ("uid") REFERENCES "users" ("uid");

ALTER TABLE "order_items" ADD FOREIGN KEY ("oid") REFERENCES "orders" ("oid");

ALTER TABLE "order_items" ADD FOREIGN KEY ("pid") REFERENCES "products" ("pid");

ALTER TABLE "products" ADD FOREIGN KEY ("category") REFERENCES "product_categories" ("id");
